# codexmate

./: .gitattributes  .gitignore  README.md  README.vi.md  README.zh.md  TODO.md  cli.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: brew-update.yml  desktop-build.yml  release.yml
cli/: agents-files.js  analytics-export-args.js  archive-helpers.js  builtin-proxy.js  claude-proxy.js  config-bootstrap.js  config-health.js  local-bridge.js  openai-bridge-session.js  openai-bridge.js  session-convert-args.js  session-convert.js  session-usage.js  update.js
doc/: desktop.md
lib/: cli-models-utils.js  cli-sessions.js  cli-webhook.js  cli-ws-server.js  win-tray.js
plugins/prompt-templates/: computed.mjs  manifest.mjs  methods.mjs  overview.mjs  ownership.mjs
scripts/: install.sh
site/: index.md
skills/codexmate-project-context-recovery/: SKILL.md
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
tests/e2e/: run.js  test-claude-proxy.js  test-claude.js  test-config.js  test-install-status.js  test-messages.js  test-session-convert-derived.js  test-session-resume-commands.js  test-sessions.js  test-setup.js  test-terminal.js  test-web-ui-assets.js  test-web-ui-session-browser.js  test-web-ui-session-tab.js  (+3 more)
tools/: generate-zh-tw.mjs
web-ui/: app.js  index.html  logic.agents-diff.mjs  logic.claude.mjs  logic.codex.mjs  logic.runtime.mjs  logic.sessions.mjs  session-helpers.mjs  source-bundle.cjs  styles.css
(+130 files in other folders)
