[package]
name = "codexmate-desktop"
version = "0.0.33"
description = "Codex Mate desktop shell"
authors = ["ymkiux"]
license = "Apache-2.0"
repository = "https://github.com/SakuraByteCore/codexmate"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
